# tex3ds

./: .gitignore  Doxyfile.in  Makefile  Makefile.am  README.md  configure.ac
buildscript/: .gitignore  Makefile
include/: atlas.h  bcfnt.h  compat.h  compress.h  encode.h  etc1.h  freetype.h  ft_error.h  future.h  magick_compat.h  quantum.h  rg_etc1.h  subimage.h  swizzle.h  tex3ds.h  thread.h  threadPool.h  utility.h
m4/: update.sh
source/: atlas.cpp  bcfnt.cpp  encode.cpp  etc1.cpp  freetype.cpp  ft_error.cpp  huff.c  huff.cpp  lzss.c  lzss.cpp  magick_compat.cpp  main.cpp  mkbcfnt.cpp  rg_etc1.cpp  rle.c  rle.cpp  swizzle.cpp  tex3ds.cpp  threadPool.cpp  utility.cpp
